--- a/app/src/main/res/layout-land/activity_reminder_setting.xml
+++ b/app/src/main/res/layout-land/activity_reminder_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,19 +13,18 @@
         >
 
         <ImageView
+            android:layout_width="20dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/backrow"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
             android:id="@+id/remindersettingBackRow"
             />
         <RelativeLayout
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_centerInParent="true"
+            android:layout_marginTop="5dp"
             android:layout_marginStart="20dp"
             android:layout_below="@id/remindersettingBackRow"
             android:id="@+id/profileicons"
@@ -50,13 +48,12 @@
                 android:gravity="start"
                 android:text="SETTING"
                 android:textColor="@color/colorWhite"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
         <RelativeLayout
             android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
             android:layout_below="@+id/profileicons"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
@@ -70,13 +67,12 @@
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
                 android:id="@+id/defuserimg"
-                android:layout_width="105dp"
-                android:layout_height="105dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
                 android:src="@drawable/defuserimage" />
-
             <TextView
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/defuserimg"
@@ -93,9 +89,9 @@
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/firstlayout"
         android:layout_centerInParent="true"
-        android:layout_marginTop="30dp"
         android:id="@+id/secondlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,7 +99,7 @@
 
         <RelativeLayout
             android:layout_alignParentTop="true"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:background="#E9E9E9"
             android:id="@+id/settinginfotitle"
             android:layout_width="match_parent"
@@ -120,12 +116,12 @@
                 />
         </RelativeLayout>
         <ImageView
-            android:paddingEnd="25dp"
-            android:paddingBottom="25dp"
-            android:scaleType="fitEnd"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_margin="20dp"
             android:src="@drawable/plusremindersetting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:scaleType="fitXY"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             />
