--- a/app/src/main/res/layout-land/activity_create_active_level.xml
+++ b/app/src/main/res/layout-land/activity_create_active_level.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@drawable/createprofilebackground"
     android:layout_height="match_parent"
     tools:context=".CreateProfile.CreateActiveLevelActivity">
     <ImageView
+        android:layout_width="20dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
         android:src="@drawable/backrow"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitXY"
         android:id="@+id/aLBackRow"
         />
     <RelativeLayout
@@ -22,27 +22,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
         >
 
         <TextView
             android:autoSizeTextType="uniform"
-            android:layout_margin="10dp"
+            android:layout_marginStart="20dp"
             android:id="@+id/textcreate"
-            android:layout_marginLeft="10dp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CREATE YOUR PROFILE"
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="@color/colorWhite"
             />
         <ImageView
-            android:scaleType="centerInside"
-            android:layout_margin="10dp"
+            android:layout_width="80dp"
+            android:layout_alignParentTop="true"
             android:layout_below="@+id/textcreate"
-            android:layout_width="100dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp"
+            android:scaleType="centerInside"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
@@ -56,16 +58,16 @@
             android:text="What is"
             android:textColor="@color/colorWhite"
             android:layout_below="@id/aLp6"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginLeft="20dp"
             android:id="@+id/whatis"
             />
         <TextView
             android:autoSizeTextType="uniform"
-            android:textSize="40dp"
+            android:layout_marginLeft="20dp"
             android:gravity="start"
             android:textStyle="bold"
-            android:layout_marginLeft="15dp"
+            android:textSize="20sp"
             android:layout_below="@+id/whatis"
             android:textColor="@color/colorWhite"
             android:layout_width="match_parent"
@@ -80,54 +82,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         >
         <Button
             android:id="@+id/notActive"
             android:layout_alignParentRight="true"
-            android:layout_width="330dp"
+            android:layout_width="460dp"
             android:layout_above="@+id/lightActive"
-            android:layout_height="80dp"
+            android:layout_height="46dp"
             android:background="@drawable/nvactive"
             />
         <Button
             android:layout_above="@+id/Active"
             android:id="@+id/lightActive"
             android:layout_alignParentLeft="true"
-            android:layout_width="330dp"
-            android:layout_height="80dp"
+            android:layout_width="460dp"
+            android:layout_height="46dp"
             android:background="@drawable/lactive"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             />
         <Button
+            android:layout_width="460dp"
             android:layout_above="@+id/veryActive"
             android:id="@+id/Active"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/fitLevelIntermediate"
-            android:layout_width="330dp"
-            android:layout_height="80dp"
+            android:layout_height="46dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/active"
             />
         <Button
-            android:layout_marginTop="5dp"
             android:layout_alignParentBottom="true"
             android:id="@+id/veryActive"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/fitLevelIntermediate"
-            android:layout_width="330dp"
-            android:layout_height="80dp"
+            android:layout_width="460dp"
+            android:layout_height="46dp"
             android:background="@drawable/vactive"
             />
 
     </RelativeLayout>
     <ImageView
-        android:layout_margin="10dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:src="@drawable/forwardrow"
         android:id="@+id/aLForwardRow"
         />
