--- a/app/src/main/res/layout-land/activity_create_bdate.xml
+++ b/app/src/main/res/layout-land/activity_create_bdate.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +7,18 @@
     tools:context=".CreateProfile.CreateBdateActivity">
 
     <ImageView
+        android:layout_width="20dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
         android:src="@drawable/backrow"
-        android:layout_marginLeft="10dp"
+        android:scaleType="fitXY"
         android:layout_marginTop="10dp"
         android:id="@+id/bDateBackRow"
         />
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/bDateBackRow"
         android:id="@+id/bDateTitle"
         android:layout_width="match_parent"
@@ -26,41 +27,59 @@
         >
 
         <TextView
+            android:layout_alignParentTop="true"
             android:autoSizeTextType="uniform"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:id="@+id/textcreate"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CREATE YOUR PROFILE"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textColor="@color/colorWhite"
             />
         <ImageView
-            android:layout_margin="5dp"
+            android:layout_width="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_below="@+id/textcreate"
-            android:layout_width="wrap_content"
+            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/cp4"
             android:id="@+id/genderp4"
             />
+        <TextView
+            android:id="@+id/whatis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:layout_below="@+id/genderp4"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:gravity="start"
+            android:text="What is"
+            android:textColor="@color/colorWhite"
+            android:textSize="10sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_margin="5dp"
+            android:layout_below="@+id/whatis"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:autoSizeTextType="uniform"
-            android:textSize="25sp"
-            android:gravity="center"
+            android:gravity="start"
+            android:text="YOUR \nBIRTH-DATE ?"
             android:textStyle="bold"
-            android:layout_below="@+id/genderp4"
             android:textColor="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="YOUR \nBIRTH-DATE ?"
-            />
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -85,7 +104,7 @@
         <EditText
             android:id="@+id/bDateEditText"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/enterdata"
             android:hint="ENTER YOUR BIRTH DATE ..."
             android:inputType="date"
@@ -106,8 +125,8 @@
 
     <ImageView
         android:id="@+id/bDateForwardRow"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="5dp"
