--- a/app/src/main/res/layout-land/activity_create_gender.xml
+++ b/app/src/main/res/layout-land/activity_create_gender.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,48 +15,53 @@
         android:orientation="vertical"
         >
         <TextView
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="20dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:id="@+id/textcreate"
-            android:layout_marginTop="40dp"
             android:layout_marginStart="15dp"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CREATE YOUR PROFILE"
             android:textStyle="bold"
-            android:textSize="17sp"
+            android:textSize="20sp"
             android:textColor="@color/colorWhite"
             />
         <ImageView
-            android:layout_alignEnd="@+id/textcreate"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="5dp"
-            android:layout_below="@+id/textcreate"
-            android:layout_width="85dp"
+            android:layout_width="100dp"
+            android:layout_alignParentRight="true"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="35dp"
+
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/cp1"
             android:id="@+id/genderp1"
             />
-
         <TextView
+            android:layout_width="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:autoSizeTextType="uniform"
+            android:gravity="start"
+            android:textSize="15sp"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="40dp"
-            android:layout_width="wrap_content"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:text="What is"
             android:textColor="@color/colorWhite"
             android:layout_below="@id/genderp1"
-            android:textSize="25dp"
-            android:layout_marginStart="20dp"
             android:id="@+id/whatis"
             />
         <TextView
             android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:textSize="40dp"
+            android:textSize="25sp"
             android:gravity="start"
             android:textStyle="bold"
             android:layout_marginStart="20dp"
@@ -70,7 +74,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:paddingTop="20dp"
+        android:layout_marginStart="30dp"
         android:layout_centerInParent="true"
         android:id="@+id/maleForm"
         android:layout_width="wrap_content"
@@ -81,8 +85,8 @@
             <ImageView
                 android:layout_alignParentStart="true"
                 android:id="@+id/genderMaleImage"
-                android:layout_width="225dp"
-                android:layout_height="150dp"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/gendermale" />
             <TextView
@@ -93,12 +97,13 @@
                 android:layout_below="@+id/genderMaleImage"
                 android:text="MALE"
                 android:textColor="@color/colorWhite"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
 
     <RelativeLayout
+        android:layout_marginEnd="30dp"
         android:layout_above="@+id/genderForwardRow"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
@@ -109,8 +114,8 @@
         >
         <ImageView
             android:id="@+id/genderFemaleImage"
-            android:layout_width="225dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
             android:scaleType="fitXY"
             android:src="@drawable/genderfemale" />
         <TextView
@@ -121,14 +126,14 @@
             android:layout_centerHorizontal="true"
             android:text="FEMALE"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="25dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
     </RelativeLayout>
     <ImageView
         android:scaleType="fitEnd"
-        android:layout_margin="10dp"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_margin="5dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:src="@drawable/forwardrow"
