--- a/app/src/main/res/layout-land/activity_fit_lev_setting.xml
+++ b/app/src/main/res/layout-land/activity_fit_lev_setting.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,13 +14,14 @@
         >
 
         <ImageView
+            android:layout_width="20dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/backrow"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
             android:id="@+id/flsettingBackRow"
             />
         <RelativeLayout
