--- a/app/src/main/res/layout-land/activity_meal_menu.xml
+++ b/app/src/main/res/layout-land/activity_meal_menu.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainprofilebackground"
@@ -16,13 +14,14 @@
         >
 
         <ImageView
+            android:layout_width="20dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/backrow"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
             android:id="@+id/caloriesplanBackRow"
             />
         <RelativeLayout
