--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,15 +12,15 @@
             android:id="@+id/register_profilePic"
             android:src="@drawable/createimage"
             android:scaleType="centerInside"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             />
         <TextView
             android:id="@+id/signupText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SIGNUP"
-            android:textSize="20dp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
             android:gravity="center"
@@ -42,7 +41,7 @@
         <EditText
             android:id="@+id/register_userName"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="35dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:autoSizeTextType="uniform"
@@ -52,7 +51,7 @@
             android:paddingLeft="42dp"
             android:textColor="@color/colorBlack"
             android:textColorHint="@color/colorGray"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="bold" />
 
         <EditText
@@ -60,7 +59,7 @@
             android:layout_marginBottom="5dp"
             android:id="@+id/register_email"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="35dp"
             android:layout_below="@+id/register_userName"
             android:layout_centerHorizontal="true"
             android:autoSizeTextType="uniform"
@@ -70,14 +69,14 @@
             android:paddingLeft="45dp"
             android:textColor="@color/colorBlack"
             android:textColorHint="@color/colorGray"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="bold" />
 
         <EditText
             android:layout_marginBottom="5dp"
             android:id="@+id/register_password"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="35dp"
             android:layout_below="@+id/register_email"
             android:layout_centerHorizontal="true"
             android:autoSizeTextType="uniform"
@@ -87,13 +86,13 @@
             android:paddingLeft="40dp"
             android:textColor="@color/colorBlack"
             android:textColorHint="@color/colorGray"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/register_confirmPassword"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="35dp"
             android:layout_below="@+id/register_password"
             android:layout_centerHorizontal="true"
             android:autoSizeTextType="uniform"
@@ -103,7 +102,7 @@
             android:paddingLeft="40dp"
             android:textColor="@color/colorBlack"
             android:textColorHint="@color/colorGray"
-            android:textSize="15dp"
+            android:textSize="10dp"
             android:textStyle="bold"
             />
     </RelativeLayout>
@@ -127,16 +126,16 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="Or"
+        android:layout_margin="5dp"
         android:textColor="@color/colorPrimaryDark"
         android:layout_centerInParent="true"
         android:layout_below="@+id/register_buttonCreateAccount"
-        android:textSize="15dp"
+        android:textSize="15sp"
         />
 
     <LinearLayout
         android:layout_below="@+id/ortext"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="10dp"
         android:id="@+id/third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -144,23 +143,22 @@
         android:gravity="center">
 
         <TextView
-            android:layout_marginRight="5dp"
+            android:layout_margin="2dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
             android:text="Already have account ?"
             android:textColor="@color/colorBlack"
-            android:textSize="15dp"
+            android:textSize="10sp"
             />
 
         <TextView
+            android:layout_margin="2dp"
             android:id="@+id/register_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
             android:text="Login"
             android:textColor="@color/colorLightPrimary"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
     </LinearLayout>
 
