--- a/app/src/main/res/layout-land/activity_setting_menu.xml
+++ b/app/src/main/res/layout-land/activity_setting_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,13 +14,14 @@
         >
 
         <ImageView
+            android:layout_width="20dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/backrow"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY"
             android:id="@+id/settingBackRow"
             />
         <RelativeLayout
@@ -67,13 +67,12 @@
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
                 android:id="@+id/defuserimg"
-                android:layout_width="105dp"
-                android:layout_height="105dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
                 android:src="@drawable/defuserimage" />
-
             <TextView
                 android:layout_toEndOf="@+id/defuserimg"
                 android:layout_alignParentEnd="true"
@@ -99,7 +98,7 @@
 
         <RelativeLayout
             android:layout_alignParentTop="true"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:background="#E9E9E9"
             android:id="@+id/settinginfotitle"
             android:layout_width="match_parent"
