--- a/app/src/main/res/layout-land/activity_welcome.xml
+++ b/app/src/main/res/layout-land/activity_welcome.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,19 +16,19 @@
         />
 
     <Button
-        android:layout_marginStart="70dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="500dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="-5dp"
+        android:layout_marginEnd="30dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/buttoncreateaccount"
-        android:layout_width="match_parent"
+        android:layout_marginBottom="10dp"
         android:layout_height="40dp"
         android:layout_above="@+id/ortext"
         android:background="@drawable/buttoncreateaccount" />
     <TextView
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_above="@+id/third"
         android:id="@+id/ortext"
         android:layout_width="wrap_content"
@@ -37,11 +36,11 @@
         android:textStyle="bold"
         android:text="Or"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20dp"
+        android:textSize="20sp"
         />
 
     <LinearLayout
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:id="@+id/third"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
