--- a/app/src/main/res/layout/activity_cal_dairy.xml
+++ b/app/src/main/res/layout/activity_cal_dairy.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,13 +12,14 @@
         android:layout_height="wrap_content"
         >
         <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/backrow"
+            android:scaleType="fitXY"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp"
+            android:src="@drawable/backrow"
             android:id="@+id/dairyBackRow"
             />
         <RelativeLayout
@@ -46,7 +46,6 @@
                 android:src="@drawable/defuserimage" />
 
             <TextView
-                android:paddingTop="15dp"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/defuserimg"
                 android:layout_alignParentEnd="true"
@@ -61,6 +60,7 @@
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/firstlayout"
         android:layout_centerInParent="true"
         android:id="@+id/secondlayout"
