--- a/app/src/main/res/layout/activity_create_active_level.xml
+++ b/app/src/main/res/layout/activity_create_active_level.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@drawable/createprofilebackground"
     android:layout_height="match_parent"
     tools:context=".CreateProfile.CreateActiveLevelActivity">
     <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentStart="true"
+        android:scaleType="fitXY"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/backrow"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
+        android:src="@drawable/backrow"
         android:id="@+id/aLBackRow"
         />
     <RelativeLayout
@@ -44,8 +44,7 @@
             android:layout_alignParentTop="true"
             android:scaleType="centerInside"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
-            android:layout_below="@+id/textcreate"
+            android:layout_marginEnd="10dp"
             android:layout_width="85dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
