--- a/app/src/main/res/layout/activity_create_bdate.xml
+++ b/app/src/main/res/layout/activity_create_bdate.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +7,14 @@
     tools:context=".CreateProfile.CreateBdateActivity">
 
     <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/backrow"
+        android:scaleType="fitXY"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
+        android:src="@drawable/backrow"
         android:id="@+id/bDateBackRow"
         />
     <RelativeLayout
@@ -42,7 +42,7 @@
         <ImageView
             android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_width="85dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -60,7 +60,7 @@
             android:text="What is"
             android:textColor="@color/colorWhite"
             android:layout_below="@id/bDatep4"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:id="@+id/whatis"
             />
         <TextView
@@ -97,17 +97,15 @@
             android:layout_height="wrap_content"
              />
         <EditText
+            android:inputType="date"
             android:id="@+id/bDateEditText"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:background="@drawable/enterdata"
             android:hint="ENTER YOUR BIRTH DATE ..."
-            android:inputType="date"
-
             android:layout_below="@+id/bDateImage"
             android:layout_centerInParent="true"
             android:layout_margin="5dp"
-
             android:autoSizeTextType="uniform"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
