--- a/app/src/main/res/layout/activity_create_gender.xml
+++ b/app/src/main/res/layout/activity_create_gender.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,6 +42,7 @@
             />
 
         <TextView
+
             android:layout_alignParentStart="true"
             android:layout_marginTop="40dp"
             android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
             android:text="What is"
             android:textColor="@color/colorWhite"
             android:layout_below="@id/genderp1"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:layout_marginStart="20dp"
             android:id="@+id/whatis"
             />
@@ -70,7 +70,6 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:paddingTop="20dp"
         android:layout_centerInParent="true"
         android:id="@+id/maleForm"
         android:layout_width="wrap_content"
@@ -81,8 +80,8 @@
             <ImageView
                 android:layout_alignParentStart="true"
                 android:id="@+id/genderMaleImage"
-                android:layout_width="225dp"
-                android:layout_height="150dp"
+                android:layout_width="240dp"
+                android:layout_height="140dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/gendermale" />
             <TextView
@@ -99,6 +98,7 @@
 
 
     <RelativeLayout
+        android:layout_marginBottom="10dp"
         android:layout_above="@+id/genderForwardRow"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
@@ -109,8 +109,8 @@
         >
         <ImageView
             android:id="@+id/genderFemaleImage"
-            android:layout_width="225dp"
-            android:layout_height="150dp"
+            android:layout_width="240dp"
+            android:layout_height="140dp"
             android:scaleType="fitXY"
             android:src="@drawable/genderfemale" />
         <TextView
@@ -126,7 +126,8 @@
     </RelativeLayout>
     <ImageView
         android:scaleType="fitEnd"
-        android:layout_margin="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentBottom="true"
