--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:background="@drawable/lgbackground"
-    >
+    android:background="@drawable/lgbackground">
 
     <ImageView
         android:src="@drawable/loginimage"
@@ -42,6 +40,7 @@
             android:textStyle="bold"/>
 
         <EditText
+            android:layout_marginLeft="5dp"
             android:textColor="@color/colorBlack"
             android:autoSizeTextType="uniform"
             android:textStyle="bold"
